# Dredge-Scripts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  Dredge_Data_Log.py  LICENSE.txt  Log.py  README.md  StartLogger.bat  backup.py  config.json  config.py  dataHandler.py  dredgeStatus.py  dweet.py  dweetUpdater.py  example_config.json  fileHandler.py  file_handeling.py  freeboardUpdater.py  freeboard_updater.py  generateImages.py  getModBusTags.py  get_data.py  gui.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  changelog.yml  codeql-analysis.yml  python-app.yml  release-drafter.yml
Tests/: TODO.md  conftest.py  csv_test.py  parse_json_test.py  parse_xml_test.py  save_files_test.py  testUtils.py  test_csv.py  test_key.py  test_parse.py  test_skeleton.py
Tests/csv_files/: test_header_change_2.csv  test_header_change_3.csv
Tests/test_files/: failed_expected.txt  test_save_hopper.xml  test_save_pipeline_0600.csv  test_write_expected.csv
docs/: conf.py  index.md
src/dredge_logger/: Log.py  __init__.py  backup.py  config.py  dataHandler.py  dredgeStatus.py  dweet.py  dweetUpdater.py  example_config.json  fileHandler.py  generateImages.py  gui.py  setup.py  skeleton.py
src/dredge_logger/resources/: StartLogger.bat
test/: save_files_test.py
test/test_files/: failed_xml_expected_1.txt  failed_xml_expected_2.txt  test_header_change_1_expected.csv  test_save_pipeline.json
tests/: parse_json_test.py  parse_xml_test.py  save_files_test.py  testUtils.py
tests/test_files/: test_save_hopper.csv  test_save_hopper.xml
