# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = dredge_logger
description = A Data Collector for the Dredge Logging
author = Luke Eltiste
author_email = luke@ilsautomation.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/Industrial-Logic-Systems/Dredge-Scripts
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

install_requires =
    appdirs==1.4.4
    dweepy==0.3.0
    matplotlib==3.5.1
    numpy==1.22.1
    pandas==1.3.5
    Pillow==9.0.0
    pyModbusTCP==0.1.10
    pyserial==3.5
    python-dotenv==0.19.2
    requests==2.27.1
    ttkthemes==3.2.2
    yagmail[all]==0.15.277


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    dredge_logger = dredge_logger.setup:main

[tool:pytest]
addopts =
    --cov dredge_logger --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = Tests

[flake8]
max_line_length = 127
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .venv
in-place = true
pep8-passes = 2000
recursive = true