[metadata]
name = dredge_logger
description = A Data Collector for the Dredge Logging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Industrial-Logic-Systems/Dredge-Scripts
author = Luke Eltiste
author_email = luke@ilsautomation.com
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find_namespace:
install_requires =
    Pillow==9.2.0
    appdirs==1.4.4
    dweepy==0.3.0
    matplotlib==3.7.0
    numpy==1.24.1
    pandas==1.5.3
    pyModbusTCP==0.2.0
    pyserial==3.5
    python-dotenv==0.19.2
    requests==2.27.1
    ttkthemes==3.2.2
    yagmail[all]==0.15.280
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    dredge_logger = dredge_logger.setup:main
    dredge_logger_init = dredge_logger.setup:initialize

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[tool:pytest]
addopts =
    --cov dredge_logger --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox

[flake8]
max_line_length = 127
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .venv
in-place = true
pep8-passes = 2000
recursive = true
